# vulntriage

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  github.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
backend/src/pipeline/: analysis.rs  routes.rs  scoring.rs  utils.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/panels/: ChecksPanel.jsx  HistoryPanel.jsx  TriagePanel.jsx
