[package]
name = "vuln-triage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vuln-triage"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "41a8f22a449481ca6c2e2bd556b9d85d23e4e0b3", version = "0.1.0" }
patchhive-github-security = { git = "https://github.com/patchhive/patchhive-github-security.git", rev = "4237fe35bde06b7795f04013dabbfd1034df9556", version = "0.1.0" }
uuid = { version = "1", features = ["serde", "v4"] }
